# dimas

./: .gitignore  CHANGELOG.md  Cargo.toml  expanded.rs  rust-toolchain.toml  rustfmt.toml
commons/dimas-behavior/: Cargo.toml
commons/dimas-behavior-derive/: Cargo.toml
commons/dimas-behavior-derive/src/: lib.rs
commons/dimas-behavior/benches/: behaviors.rs  complex.rs  fallback.rs  multitree.rs  parallel.rs  sequence.rs
commons/dimas-behavior/examples/: t01_build_your_first_tree.rs  t01_build_your_first_tree_explicit.rs  t02_basic_ports.rs  t03_generic_ports.rs  t04_reactive_sequence.rs  t05_crossdoor.rs  t06_subtree_port_remapping.rs  t07_load_multiple_xml.rs  t08_additional_node_args.rs  t09_scripting.rs  t10_observer.rs  t11_groot_howto.rs  t12_default_ports.rs  t13_access_by_ref.rs  t14_subtree_model.rs  t15_nodes_mocking.rs  t16_global_blackboard.rs  t17_blackboard_backup.rs  t18_waypoints.rs
commons/dimas-behavior/examples/common/: cross_door.rs  mod.rs
commons/dimas-behavior/examples/t07_load_multiple_xml_with_include/: main.rs  subtree_B.xml
commons/dimas-behavior/src/: lib.rs
commons/dimas-behavior/tests/: basic_tests.rs  behavior.rs  blackboard.rs  complex.rs  normal.rs  observer.rs  reactive_fallback.rs  reactive_sequence.rs  subtree_A.xml  t01_build_your_first_tree.rs  t02_basic_ports.rs  t03_generic_ports.rs  t04_reactive_sequence.rs  t05_crossdoor.rs  t06_subtree_port_remapping.rs  t07_load_multiple_xml.rs  t08_additional_node_args.rs  t09_scripting.rs  t10_observer.rs  t11_groot_howto.rs  t12_default_ports.rs  t13_access_by_ref.rs  t14_subtree_model.rs  t15_nodes_mocking.rs  t16_global_blackboard.rs  t17_blackboard_backup.rs  t18_waypoints.rs  test_nodes.rs
commons/dimas-builtin/: Cargo.toml
commons/dimas-builtin/benches/: fallback.rs  parallel.rs  sequence.rs
commons/dimas-builtin/src/: lib.rs
commons/dimas-builtin/tests/: f01_subtree_loop.rs  normal.rs  scripting.xml  t01_first_tree.rs  t02_basic_ports.rs  t03_generic_ports.rs  t04_sequence.rs  t05_subtrees.rs  t06_subtree_ports.rs  t07_multiple_xml.rs  t08_additional_args.rs  t09_scripting.rs  t10_observer.rs  t11_groot2.rs  t12_default_ports.rs  t13_blackboard_reference.rs  t14_subtree_model.rs  t15_replace_rules.rs  t16_global_blackboard.rs  t17_blackboard_backup.rs  t18_waypoints.rs
commons/dimas-config/: Cargo.toml  config_example.json5
commons/dimas-config/src/: config.rs  error.rs  lib.rs  utils.rs
commons/dimas-config/tests/: config.rs  f01_subtree_loop.rs  normal.rs  subtree_A.xml  subtree_B.xml  t01_first_tree.rs  t02_basic_ports.rs  t03_generic_ports.rs  t04_sequence.rs  t05_subtrees.rs  t06_subtree_ports.rs  t07_multiple_xml.rs  t08_additional_args.rs  t09_scripting.rs  t10_observer.rs  t11_groot2.rs  t12_default_ports.rs  t13_blackboard_reference.rs  t14_subtree_model.rs  t15_replace_rules.rs  t16_global_blackboard.rs
commons/dimas-core/: Cargo.toml
commons/dimas-core/benches/: comparison.rs  equality.rs  expression.rs
commons/dimas-core/src/: error.rs  lib.rs  macros.rs  utils.rs  value.rs
commons/dimas-core/tests/: activity.rs  activity_type.rs  agent.rs  behavior.rs  blackboard.rs  bool.rs  bytecode.rs  component.rs  component_type.rs  expressions.rs  lexing.rs  logic_operators.rs  normal.rs  operation_state.rs  operational.rs  operational_type.rs  operators.rs  scripting.rs  system.rs  test-template.rs
commons/dimas-macro-tests/: Cargo.toml
commons/dimas-macro-tests/src/: agent.rs  component.rs  lib.rs
commons/dimas-macros/: Cargo.toml
commons/dimas-macros/src/: behavior_impl.rs  behavior_struct.rs  impl_activity.rs  impl_agent.rs  impl_component.rs  impl_component_old.rs  impl_main.rs  impl_operational.rs  impl_parameter.rs  impl_register_behavior.rs  impl_system.rs  lib.rs  register_behavior.rs  utils.rs
commons/dimas-macros/tests/: activity.rs  all.rs  component.rs  main.rs
commons/dimas-scripting/: Cargo.toml  README.md
commons/dimas-scripting-macros/: Cargo.toml  LICENSE
commons/dimas-scripting-macros/src/: lib.rs
commons/dimas-scripting-macros/tests/: all.rs
commons/dimas-scripting/benches/: comparison.rs  equality.rs  expression.rs
commons/dimas-scripting/src/: error.rs  lib.rs  runtime.rs
commons/dimas-scripting/tests/: bool.rs  expressions.rs  lexing.rs  logic_operators.rs  normal.rs  operators.rs  variables.rs
commons/dimas-time/: Cargo.toml
commons/dimas-time/src/: error.rs  interval_timer.rs  interval_timer_old.rs  interval_timer_parameter.rs  lib.rs  timer.rs  timer_builder.rs  timer_lib.rs  timer_old.rs  timer_variant.rs
commons/dimas-time/tests/: normal.rs
dimas/: Cargo.toml  README.md
dimas/examples/: README.md
dimas/examples/observable/: main.rs
dimas/examples/observer/: main.rs
dimas/examples/publisher/: main.rs
dimas/examples/querier/: main.rs
dimas/examples/queryable/: main.rs
dimas/examples/repl/: main.rs
dimas/examples/subscriber/: main.rs
dimas/src/: agent.rs  agent_old.rs  context.rs  context_old.rs  core_tree.xml  error.rs  lib.rs  prelude.rs  prelude_old.rs
dimas/src/builder/: builder_states.rs  error.rs  liveliness_subscriber_builder.rs  mod.rs  observable_builder.rs  observer_builder.rs  publisher_builder.rs  querier_builder.rs  queryable_builder.rs  subscriber_builder.rs  timer_builder.rs
dimas/src/builder_old/: builder_states.rs  mod.rs  observable_builder.rs  querier_builder.rs  queryable_builder.rs  subscriber_builder.rs
dimas/src/com/: com.xml  communicator.rs  mod.rs  publisher.rs  ros_publisher.rs  ros_subscriber.rs  subscriber.rs
dimas/src/timer/: interval_timer.rs  mod.rs  timer.xml  timer_lib.rs
dimas/src/utils/: component_register.rs  component_registry.rs  component_registry_type.rs  error.rs  lib_manager.rs  mod.rs
dimas/src/utils_old/: component_registry.rs  component_registry_type.rs  lib_manager.rs  mod.rs
dimas/tests/: normal.rs
test-data/cross-door/: Cargo.toml
test-data/cross-door/src/: cross_door.rs  cross_door_plugin.rs  lib.rs
test-data/test-behaviors/: Cargo.toml
test-data/test-behaviors/src/: behavior_plugin.rs  lib.rs  test_nodes.rs
(+429 files in other folders)
