# Copyright © 2023 Stephan Kunz
# See https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver="3"

members = [
	"commons/dimas-behavior",
	"commons/dimas-behavior-derive",
	"commons/dimas-com",
	"commons/dimas-commands",
	"commons/dimas-config",
	"commons/dimas-core",
	"commons/dimas-macros",
	"commons/dimas-scripting",
	"commons/dimas-time",
	"dimas",
	"dimasctl",
	"dimasmon",
	"test-data/cross-door",
	"test-data/test-behaviors",
]

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
#unused="allow" # for dev only

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"
version = "0.5.0"
authors = [
	"stepkun <stephan.kunz@kabelbw.de>",
]
#license = "NGMC"
license-file = "LICENSE"
keywords = ["automation", "mas", "robots", "robotics"]
categories = [
	"development-tools",
	"network-programming",
	"science::robotics",
	"simulation"
]
homepage = "https://dimas-fw.github.io/"
repository = "https://github.com/dimas-fw/dimas/"

[workspace.dependencies]
dimas = { path = "dimas" }
#dimas = "0.5.0"
dimas-behavior = { path = "commons/dimas-behavior" }
#dimas-behavior = "0.5.0"
dimas-behavior-derive = { path = "commons/dimas-behavior-derive" }
#dimas-behavior-derive = "0.5.0"
dimas-com = { path = "commons/dimas-com" }
#dimas-com = "0.5.0"
dimas-commands = { path = "commons/dimas-commands" }
#dimas-commands = "0.5.0"
dimas-config = { path = "commons/dimas-config" }
#dimas-config = "0.5.0"
dimas-core = { path = "commons/dimas-core" }
#dimas-core = "0.5.0"
dimas-macros = { path = "commons/dimas-macros" }
#dimas-macros = "0.5.0"
dimas-scripting = { path = "commons/dimas-scripting" }
#dimas-scripting = "0.5.0"
dimas-time = { path = "commons/dimas-time" }
#dimas-time = "0.5.0"
anyhow = "1.0.98"
clap = "4.5.38"
criterion = { version = "0.6.0", features = ["async_tokio"] }
crossterm = "0.29.0"
doc-comment = "0.3.3"
futures = "0.3.31"
hashbrown = "0.15.3"
libloading = "0.8.7"
parking_lot = "0.12.3"
rand = "0.9.1"
roxmltree = "0.20.0"
rustc-hash = "2.1.1"
serial_test = "3.2.0"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["parking_lot"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"]}
trybuild = { version = "1.0.105", features = ["diff"] }
zenoh = "1.4.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
