# Copyright © 2023 Stephan Kunz
[package]
name = "dimas"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
#license = "NGMC"
license-file = "LICENSE"
keywords = { workspace = true }
categories = { workspace = true }
homepage.workspace = true
repository.workspace = true
description = "dimas - a framework for Distributed Multi Agent Systems"
documentation = "https://docs.rs/dimas/latest/dimas/"
readme = "README.md"
exclude = [
    "tests/**/*",
    "examples/**/*",
]

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
anyhow = { workspace = true }
bitcode = { workspace = true }
chrono = { workspace = true }
#derive_more = { workspace = true, features = ["from"] }
dirs = { workspace = true }
dimas-com = { workspace = true }
dimas-commands = { workspace = true }
dimas-config = { workspace = true }
dimas-core = { workspace = true }
dimas-macros = { workspace =true }
dimas-time = { workspace = true }
futures = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zenoh = { workspace = true }

[dev-dependencies]
doc-comment = { workspace = true }

[build-dependencies]


[features]
unstable = ["zenoh/unstable", "dimas-com/unstable", "dimas-core/unstable"]