# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-behavior-derive"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Derive proc-macros for dimas-behavior"
documentation = "https://docs.rs/dimas-behavior-derive/latest/dimas-behavior-derive/"
readme = "README.md"
exclude = [
    "benchees/**",
    "examples/**",
    "tests/**",
]

[lib]
proc-macro = true

# [[test]]
# name = "tests"
# path = "tests/all.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }

[build-dependencies]

[dev-dependencies]
#futures = { workspace = true }
#tokio = { workspace = true, features = ["rt-multi-thread"] }
#trybuild = { workspace = true }

[lints]
workspace = true
