# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-builtin"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-builtin - builtin library for DiMAS"
documentation = "https://docs.rs/dimas-behavior/latest/dimas-behavior/"
readme = "README.md"
exclude = [
    "benches/**",
    "examples/**",
    "tests/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "fallback"
harness = false

[[bench]]
name = "parallel"
harness = false

[[bench]]
name = "sequence"
harness = false

[lints]
workspace = true

[dependencies]
dimas-behavior = { workspace = true }
dimas-macros = { workspace = true }
dimas-scripting = { workspace = true }
evalexpr = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
roxmltree = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[features]
default = ["std"]
std = []
unstable = []
