# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-config"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-config - configuration library for DiMAS"
documentation = "https://docs.rs/dimas-config/latest/dimas-config/"
readme = "README.md"
exclude = [
    "tests/**",
    "examples/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dimas-core = { workspace = true }
dimas-macros = { workspace = true }
evalexpr = { workspace = true }
futures = { workspace = true }
hashbrown = { workspace = true }
roxmltree = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true}

[build-dependencies]

[dev-dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[features]
default = ["std"]
std = []