# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-core - core library for DiMAS"
documentation = "https://docs.rs/dimas-core/latest/dimas-core/"
readme = "README.md"
exclude = [
    "tests/**/*",
    "examples/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
missing_docs = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[dependencies]
anyhow = { workspace = true}
bitcode = { workspace = true}
libloading = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
zenoh = { workspace = true}

[features]
default = ["std"]
std = []
unstable = ["zenoh/unstable"]
