# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-core - core library for DiMAS"
documentation = "https://docs.rs/dimas-core/latest/dimas-core/"
readme = "README.md"
exclude = [
    "benches/**",
    "examples/**",
    "tests/**",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "equality"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "expression"
harness = false

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]

[dev-dependencies]
criterion = "0.5.1"

[features]
default = ["std"]
std = []
unstable = []
