# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-macro-tests"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "expand tests for dimas macros"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
dimas-core = { workspace = true }
dimas-macros = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
