# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-macros"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "proc-macros for dimas"
documentation = "https://docs.rs/dimas-macros/latest/dimas-macros/"
readme = "README.md"
exclude = [
    "tests/**",
    "examples/**",
]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
proc-macro2 = { version = "1.0.94", features = ["nightly"] }
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full", "visit-mut"] }

[dev-dependencies]
dimas-core = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
trybuild = { workspace = true }

[lints]
workspace = true
