# Copyright © 2025 Stephan Kunz

[package]
name = "dimas-scripting-macros"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Procedural macros for dimas-scripting"
documentation = "https://docs.rs/dimas-scripting-macros/latest/dimas-scripting-macros/"
readme = "README.md"
exclude = [
    "benches/**",
    "examples/**",
    "tests/**",
]

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/all.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "visit-mut"] }

[build-dependencies]

[dev-dependencies]
dimas-scripting = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
