# Copyright © 2025 Stephan Kunz

[package]
name = "cross-door"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MIT"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "CrossDoor behavior for DiMAS"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "cross_door"
#crate-type = ["cdylib"]
crate-type = ["dylib", "rlib"]

[dependencies]
dimas-behavior = { workspace = true }
dimas-behavior-derive = { workspace = true }
dimas-core = { workspace = true }
anyhow = { workspace = true}
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true}

[build-dependencies]

[dev-dependencies]

[features]
default = ["std"]
std = []
#unstable = []
