# Copyright © 2025 Stephan Kunz

[package]
name = "test-behaviors"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license = "MIT"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Test behaviors for DiMAS"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[lib]
name = "test_behaviors"
#crate-type = ["cdylib"]
crate-type = ["dylib", "rlib"]

[dependencies]
dimas-behavior = { workspace = true }
dimas-behavior-macros = { workspace = true }
dimas-core = { workspace = true }
anyhow = { workspace = true}
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true}

[build-dependencies]

[dev-dependencies]

[features]
default = ["std"]
std = []
#unstable = []
